feat: UIデザインを刷新し、CSS変数、タイポグラフィ、および主要セクションのスタイルを更新

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,12 @@
   <title>ダイエット簡単レシピ | 一週間献立プラン</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=DM+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!-- Header -->
   <header>
@@ -26,10 +30,13 @@
 
   <!-- Hero Section -->
   <section id="home" class="hero">
-    <div class="hero-content">
-      <h1>美味しく、楽しく、健康的に</h1>
-      <p>ダイエット中でも満足できる、簡単で美味しい一週間レシピをご提案。<br>栄養バランスを考えた献立で、理想の体型を手に入れましょう。</p>
-      <a href="#weekly-plan" class="cta-button">一週間プランを見る</a>
+    <div class="container">
+      <div class="hero-content">
+        <span class="hero-label">✨ 健康的なダイエット生活</span>
+        <h1>美味しく、楽しく、<br>健康的に</h1>
+        <p class="text-large">ダイエット中でも満足できる、簡単で美味しい一週間レシピをご提案。栄養バランスを考えた献立で、理想の体型を手に入れましょう。</p>
+        <a href="#weekly-plan" class="cta-button">一週間プランを見る</a>
+      </div>
     </div>
   </section>
 
@@ -37,6 +44,7 @@
   <section id="features" class="features">
     <div class="container">
       <div class="section-header">
+        <span class="section-label">Features</span>
         <h2>3つの特徴</h2>
         <p class="section-subtitle">ダイエットを成功に導くための、こだわりのポイント</p>
       </div>
@@ -64,6 +72,7 @@
   <section id="weekly-plan" class="weekly-plan">
     <div class="container">
       <div class="section-header">
+        <span class="section-label">Weekly Plan</span>
         <h2>一週間献立プラン</h2>
         <p class="section-subtitle">毎日の食事を楽しみながら、健康的にダイエット</p>
       </div>
@@ -386,6 +395,7 @@
   <section id="recipes" class="recipe-gallery">
     <div class="container">
       <div class="section-header">
+        <span class="section-label">Recipes</span>
         <h2>人気レシピ</h2>
         <p class="section-subtitle">ダイエット中でも美味しく楽しめる、厳選レシピ</p>
       </div>
@@ -458,6 +468,7 @@
   <section id="nutrition" class="nutrition">
     <div class="container">
       <div class="section-header">
+        <span class="section-label">Nutrition Tips</span>
         <h2>ダイエット成功のポイント</h2>
         <p class="section-subtitle">健康的に痩せるための基本知識</p>
       </div>
@@ -516,4 +527,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
