index.htmlのダイエットプランコンテンツを更新しました。

--- a/index.html
+++ b/index.html
@@ -468,35 +468,50 @@
   <section id="nutrition" class="nutrition">
     <div class="container">
       <div class="section-header">
-        <span class="section-label">Nutrition Tips</span>
-        <h2>ダイエット成功のポイント</h2>
-        <p class="section-subtitle">健康的に痩せるための基本知識</p>
+        <span class="section-label">Nutrition Guide</span>
+        <h2>ダイエット成功のための栄養ガイド</h2>
+        <p class="section-subtitle">健康的に理想の体型を手に入れるために知っておきたいこと</p>
       </div>
       <div class="nutrition-content">
         <div class="nutrition-article">
-          <h3>バランスの良い食事が成功の鍵</h3>
-          <p>ダイエットを成功させるために最も重要なのは、栄養バランスの取れた食事です。タンパク質、炭水化物、脂質の三大栄養素を適切な比率で摂取することで、体は効率的にエネルギーを消費し、健康的に体重を減らすことができます。
+          <h3>栄養バランスとカロリー管理</h3>
+          <p>
+            ダイエットを成功させるために最も重要なのは、栄養バランスの取れた食事です。タンパク質、炭水化物、脂質の三大栄養素を適切な比率で摂取することで、体は効率的にエネルギーを消費し、健康的に体重を減らすことができます。理想的な比率は、タンパク質30%、炭水化物40%、脂質30%程度。極端に何かを制限するのではなく、バランスを意識することが長続きの秘訣です。
           </p>
-          <p>理想的な比率は、タンパク質30%、炭水化物40%、脂質30%程度。極端に何かを制限するのではなく、バランスを意識することが長続きの秘訣です。</p>
-          <h3>適切なカロリー管理で無理なく続ける</h3>
-          <p>このサイトでご提案している一週間プランは、1日1,200〜1,400kcalを目安に設計されています。これは、無理なく健康的に体重を減らせる範囲です。</p>
-          <p>急激なカロリー制限は、一時的に体重が減っても、リバウンドのリスクが高まります。また、基礎代謝が低下し、痩せにくい体質になってしまう可能性も。ゆっくりと着実に、月に2〜3kgのペースで減量することを目標にしましょう。
+
+          <p>
+            このサイトでご提案している一週間プランは、1日1,200〜1,400kcalを目安に設計されています。これは、無理なく健康的に体重を減らせる範囲です。急激なカロリー制限は、一時的に体重が減っても、リバウンドのリスクが高まります。また、基礎代謝が低下し、痩せにくい体質になってしまう可能性も。ゆっくりと着実に、月に2〜3kgのペースで減量することを目標にしましょう。
           </p>
-          <h3>高タンパク質で筋肉を守る</h3>
-          <p>ダイエット中は、脂肪だけでなく筋肉も減少しやすくなります。筋肉が減ると基礎代謝が下がり、痩せにくい体になってしまいます。これを防ぐために重要なのが、タンパク質の十分な摂取です。</p>
-          <p>1日あたり体重1kgにつき1.2〜1.5gのタンパク質を目標に。鶏胸肉、魚、豆腐、卵など、良質なタンパク源を毎食取り入れましょう。このサイトのレシピは、すべて高タンパク質を意識して作られています。</p>
-          <h3>食物繊維で満腹感と腸内環境を整える</h3>
-          <p>食物繊維は、ダイエットの強い味方です。野菜、海藻類、きのこ類などに豊富に含まれる食物繊維は、少量でも満腹感を得やすく、食べ過ぎを防いでくれます。</p>
-          <p>さらに、腸内環境を整える効果もあり、便秘の解消や代謝の向上にもつながります。毎食、野菜を中心としたおかずを1〜2品加えることを心がけましょう。</p>
-          <h3>水分補給で代謝をアップ</h3>
-          <p>意外と見落とされがちですが、水分補給はダイエットにおいて非常に重要です。1日2リットル以上の水を飲むことで、体内の老廃物が排出されやすくなり、代謝が促進されます。</p>
-          <p>特に、食事の30分前にコップ1杯の水を飲むと、満腹感が得やすくなり、食べ過ぎを防ぐ効果も。ただし、食事中の過度な水分摂取は消化を妨げるので注意しましょう。</p>
-          <h3>規則正しい食事で代謝を安定させる</h3>
-          <p>ダイエット中だからといって、食事を抜くのは逆効果です。朝食、昼食、夕食の3食をしっかり食べることで、血糖値が安定し、間食の誘惑を減らすことができます。</p>
-          <p>特に朝食は重要です。朝食を食べることで体温が上がり、1日の代謝が活発になります。また、夕食は就寝の3時間前までに済ませることで、睡眠の質も向上し、ダイエット効果が高まります。</p>
-          <h3>継続は力なり</h3>
-          <p>最後に、最も大切なのは「継続すること」です。完璧を目指す必要はありません。たまには好きなものを食べる日があってもいいのです。大切なのは、長期的に健康的な食生活を続けること。</p>
-          <p>このサイトのレシピを参考に、無理なく楽しみながら、理想の体型を手に入れましょう!</p>
+
+          <p>
+            特に重要なのがタンパク質の摂取です。ダイエット中は、脂肪だけでなく筋肉も減少しやすくなります。筋肉が減ると基礎代謝が下がり、痩せにくい体になってしまいます。これを防ぐために、1日あたり体重1kgにつき1.2〜1.5gのタンパク質を目標に。鶏胸肉、魚、豆腐、卵など、良質なタンパク源を毎食取り入れましょう。このサイトのレシピは、すべて高タンパク質を意識して作られています。
+          </p>
+        </div>
+
+        <div class="nutrition-article">
+          <h3>食事の質を高める習慣</h3>
+          <p>
+            食物繊維は、ダイエットの強い味方です。野菜、海藻類、きのこ類などに豊富に含まれる食物繊維は、少量でも満腹感を得やすく、食べ過ぎを防いでくれます。さらに、腸内環境を整える効果もあり、便秘の解消や代謝の向上にもつながります。毎食、野菜を中心としたおかずを1〜2品加えることを心がけましょう。
+          </p>
+
+          <p>
+            意外と見落とされがちですが、水分補給はダイエットにおいて非常に重要です。1日2リットル以上の水を飲むことで、体内の老廃物が排出されやすくなり、代謝が促進されます。特に、食事の30分前にコップ1杯の水を飲むと、満腹感が得やすくなり、食べ過ぎを防ぐ効果も。ただし、食事中の過度な水分摂取は消化を妨げるので注意しましょう。
+          </p>
+
+          <p>
+            また、規則正しい食事のリズムも大切です。ダイエット中だからといって、食事を抜くのは逆効果です。朝食、昼食、夕食の3食をしっかり食べることで、血糖値が安定し、間食の誘惑を減らすことができます。特に朝食は重要です。朝食を食べることで体温が上がり、1日の代謝が活発になります。また、夕食は就寝の3時間前までに済ませることで、睡眠の質も向上し、ダイエット効果が高まります。
+          </p>
+        </div>
+
+        <div class="nutrition-article">
+          <h3>継続可能なダイエット</h3>
+          <p>
+            最後に、最も大切なのは「継続すること」です。完璧を目指す必要はありません。たまには好きなものを食べる日があってもいいのです。大切なのは、長期的に健康的な食生活を続けること。一時的な我慢や極端な制限ではなく、日々の小さな積み重ねが、理想の体型への近道となります。
+          </p>
+
+          <p>
+            このサイトのレシピは、どれも簡単に作れて、美味しく、栄養バランスに優れています。忙しい毎日の中でも無理なく続けられるように工夫されています。無理なく楽しみながら、健康的な食生活を習慣化していきましょう。あなたの理想の体型は、きっと手に入ります!
+          </p>
         </div>
       </div>
     </div>
