feat: スタイリッシュなテキストハイライトスタイルを追加しました。

--- a/index.html
+++ b/index.html
@@ -476,37 +476,54 @@
         <div class="nutrition-article">
           <h3>栄養バランスとカロリー管理</h3>
           <p>
-            ダイエットを成功させるために最も重要なのは、栄養バランスの取れた食事です。タンパク質、炭水化物、脂質の三大栄養素を適切な比率で摂取することで、体は効率的にエネルギーを消費し、健康的に体重を減らすことができます。理想的な比率は、タンパク質30%、炭水化物40%、脂質30%程度。極端に何かを制限するのではなく、バランスを意識することが長続きの秘訣です。
+            ダイエットを成功させるために最も重要なのは、<span class="highlight-primary">栄養バランスの取れた食事</span>です。タンパク質、炭水化物、脂質の三大栄養素を<span
+              class="highlight-secondary">適切な比率で摂取する</span>ことで、体は効率的にエネルギーを消費し、健康的に体重を減らすことができます。<span
+              class="highlight-accent">理想的な比率は、タンパク質30%、炭水化物40%、脂質30%程度</span>。極端に何かを制限するのではなく、バランスを意識することが長続きの秘訣です。
           </p>
 
           <p>
-            このサイトでご提案している一週間プランは、1日1,200〜1,400kcalを目安に設計されています。これは、無理なく健康的に体重を減らせる範囲です。急激なカロリー制限は、一時的に体重が減っても、リバウンドのリスクが高まります。また、基礎代謝が低下し、痩せにくい体質になってしまう可能性も。ゆっくりと着実に、月に2〜3kgのペースで減量することを目標にしましょう。
+            このサイトでご提案している一週間プランは、<span
+              class="highlight-accent">1日1,200〜1,400kcalを目安</span>に設計されています。これは、無理なく健康的に体重を減らせる範囲です。<span
+              class="highlight-primary">急激なカロリー制限</span>は、一時的に体重が減っても、リバウンドのリスクが高まります。また、基礎代謝が低下し、痩せにくい体質になってしまう可能性も。ゆっくりと着実に、<span
+              class="highlight-secondary">月に2〜3kgのペースで減量する</span>ことを目標にしましょう。
           </p>
 
           <p>
-            特に重要なのがタンパク質の摂取です。ダイエット中は、脂肪だけでなく筋肉も減少しやすくなります。筋肉が減ると基礎代謝が下がり、痩せにくい体になってしまいます。これを防ぐために、1日あたり体重1kgにつき1.2〜1.5gのタンパク質を目標に。鶏胸肉、魚、豆腐、卵など、良質なタンパク源を毎食取り入れましょう。このサイトのレシピは、すべて高タンパク質を意識して作られています。
+            特に重要なのが<span
+              class="highlight-primary">タンパク質の摂取</span>です。ダイエット中は、脂肪だけでなく筋肉も減少しやすくなります。筋肉が減ると基礎代謝が下がり、痩せにくい体になってしまいます。これを防ぐために、<span
+              class="highlight-accent">1日あたり体重1kgにつき1.2〜1.5gのタンパク質を目標</span>に。鶏胸肉、魚、豆腐、卵など、<span
+              class="highlight-secondary">良質なタンパク源を毎食取り入れましょう</span>。このサイトのレシピは、すべて高タンパク質を意識して作られています。
           </p>
         </div>
 
         <div class="nutrition-article">
           <h3>食事の質を高める習慣</h3>
           <p>
-            食物繊維は、ダイエットの強い味方です。野菜、海藻類、きのこ類などに豊富に含まれる食物繊維は、少量でも満腹感を得やすく、食べ過ぎを防いでくれます。さらに、腸内環境を整える効果もあり、便秘の解消や代謝の向上にもつながります。毎食、野菜を中心としたおかずを1〜2品加えることを心がけましょう。
+            <span class="highlight-secondary">食物繊維</span>は、ダイエットの強い味方です。野菜、海藻類、きのこ類などに豊富に含まれる食物繊維は、<span
+              class="highlight-primary">少量でも満腹感を得やすく</span>、食べ過ぎを防いでくれます。さらに、<span
+              class="highlight-accent">腸内環境を整える効果</span>もあり、便秘の解消や代謝の向上にもつながります。毎食、野菜を中心としたおかずを1〜2品加えることを心がけましょう。
           </p>
 
           <p>
-            意外と見落とされがちですが、水分補給はダイエットにおいて非常に重要です。1日2リットル以上の水を飲むことで、体内の老廃物が排出されやすくなり、代謝が促進されます。特に、食事の30分前にコップ1杯の水を飲むと、満腹感が得やすくなり、食べ過ぎを防ぐ効果も。ただし、食事中の過度な水分摂取は消化を妨げるので注意しましょう。
+            意外と見落とされがちですが、<span class="highlight-primary">水分補給</span>はダイエットにおいて非常に重要です。<span
+              class="highlight-accent">1日2リットル以上の水を飲む</span>ことで、体内の老廃物が排出されやすくなり、代謝が促進されます。特に、<span
+              class="highlight-secondary">食事の30分前にコップ1杯の水を飲む</span>と、満腹感が得やすくなり、食べ過ぎを防ぐ効果も。ただし、食事中の過度な水分摂取は消化を妨げるので注意しましょう。
           </p>
 
           <p>
-            また、規則正しい食事のリズムも大切です。ダイエット中だからといって、食事を抜くのは逆効果です。朝食、昼食、夕食の3食をしっかり食べることで、血糖値が安定し、間食の誘惑を減らすことができます。特に朝食は重要です。朝食を食べることで体温が上がり、1日の代謝が活発になります。また、夕食は就寝の3時間前までに済ませることで、睡眠の質も向上し、ダイエット効果が高まります。
+            また、<span class="highlight-secondary">規則正しい食事のリズム</span>も大切です。ダイエット中だからといって、食事を抜くのは逆効果です。<span
+              class="highlight-primary">朝食、昼食、夕食の3食をしっかり食べる</span>ことで、血糖値が安定し、間食の誘惑を減らすことができます。特に朝食は重要です。朝食を食べることで体温が上がり、1日の代謝が活発になります。また、<span
+              class="highlight-accent">夕食は就寝の3時間前までに済ませる</span>ことで、睡眠の質も向上し、ダイエット効果が高まります。
           </p>
         </div>
 
         <div class="nutrition-article">
           <h3>継続可能なダイエット</h3>
           <p>
-            最後に、最も大切なのは「継続すること」です。完璧を目指す必要はありません。たまには好きなものを食べる日があってもいいのです。大切なのは、長期的に健康的な食生活を続けること。一時的な我慢や極端な制限ではなく、日々の小さな積み重ねが、理想の体型への近道となります。
+            最後に、最も大切なのは<span
+              class="highlight-primary">「継続すること」</span>です。完璧を目指す必要はありません。たまには好きなものを食べる日があってもいいのです。大切なのは、<span
+              class="highlight-secondary">長期的に健康的な食生活を続けること</span>。一時的な我慢や極端な制限ではなく、<span
+              class="highlight-accent">日々の小さな積み重ね</span>が、理想の体型への近道となります。
           </p>
 
           <p>
